fixing duplication and deleting board on mobile

--- a/todo/app/assets/stylesheets/moods/mood_selection.css
+++ b/todo/app/assets/stylesheets/moods/mood_selection.css
@@ -121,6 +121,7 @@
 .generate-board-legend {
   text-align: center;
   margin-top: 10px;
+  font-size: 17px;
   font-weight: bold;
   color: var(--text-color-gray-100);
 }
